Added meta entries

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+  <meta name="description" content="JSON Schema validation for JSON data, including references.">
+  <meta name="keywords" content="JSON, JSON Schema, validation, reference">
   <title>JSON Validate</title>
 
   <link rel="shortcut icon" href="favicon.png">
